--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML>
+<!-- 
+Meredith Sauer 
+-->
 <!--
 	Forty by HTML5 UP
 	html5up.net | @ajlkn
@@ -6,7 +9,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Boxing Stat App</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
